<resources>
    <string name="app_name">Proiect.v1</string>
    <string name="loginPasswordText">Password</string>
    <string name="loginUsernameText">Username</string>
    <string name="registerEmailText">Email</string>
    <string name="registerPasswordText">Password</string>
    <string name="registerPasswordCheckText">Check Password</string>
    <string name="registerAddressText">Address</string>
    <string name="registerMaleText">Male</string>
    <string name="registerFemaleText">Female</string>
    <string name="myprofileHelloText">Salut ###Username###</string>
    <string name="myprofilePasswordText">Password</string>
    <string name="myprofilePasswordCheckText">Check Password</string>
    <string name="reviewNotaText">Va place aplicatia noastra? Acordati-ne o nota</string>
    <string name="contactmeMessageTWText">Scrie-ne un mesaj:</string>
    <string name="contactmeMessageText">Message</string>
    <string name="aboutHistoryText">Aceasta echipa este formata din: Mihai Gradinescu, Ioan Irimia, Florin Ivan. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi finibus eros id elementum dictum. Nam eu lectus quis dolor pharetra aliquet. Nulla facilisi. Donec magna mi, tincidunt in pulvinar eu, tristique ut mi. In tortor quam, vulputate ac dictum sagittis, viverra sed urna.</string>
    <string name="quiz3SwitchText">Ati mai facut quiz-ul nostru?</string>
    <string name="mainEchipaText">Bun venit la proiectul studentilor: Gradinescu Mihai, Irimia Ioan, Ivan Florin</string>
    <string name="quiz4QuestionText">Ati recomanda acest bar unui prieten</string>
    <string name="quiz4VariantaA">Nu as mai calca niciodata aici</string>
    <string name="quiz4VariantaB">Merita vizitat o data</string>
    <string name="quiz4VariantaC">As merge aici zilnic</string>
</resources>
