<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/registerEmailTW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="310dp"
        android:layout_marginBottom="476dp"
        android:text="@string/registerEmailText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/registerEmailET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="449dp"
        android:ems="10"
        android:hint="@string/registerEmailText"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/registerEmailTW"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registerPasswordTW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="298dp"
        android:layout_marginBottom="384dp"
        android:text="@string/registerPasswordText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEmailTW" />

    <EditText
        android:id="@+id/registerPasswordET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="374dp"
        android:ems="10"
        android:hint="@string/loginPasswordText"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/registerPasswordTW"
        app:layout_constraintTop_toBottomOf="@+id/registerEmailET" />

    <TextView
        android:id="@+id/registerPasswordCheckTW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="292dp"
        android:layout_marginBottom="325dp"
        android:text="@string/registerPasswordText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordTW" />

    <EditText
        android:id="@+id/registerPasswordCheckET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="305dp"
        android:ems="10"
        android:hint="@string/registerPasswordCheckText"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/registerPasswordCheckTW"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordET" />

    <TextView
        android:id="@+id/registerAddressTW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="292dp"
        android:layout_marginBottom="259dp"
        android:text="@string/registerAddressText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordCheckTW" />

    <EditText
        android:id="@+id/registerAddressET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="242dp"
        android:ems="10"
        android:hint="@string/registerAddressText"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/registerAddressTW"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordCheckET" />

    <RadioGroup
        android:id="@+id/registerGenderRG"
        android:layout_width="150dp"
        android:layout_height="59dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="196dp"
        android:layout_marginBottom="157dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerAddressET">

        <RadioButton
            android:id="@+id/registerMaleRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/registerMaleText" />

        <RadioButton
            android:id="@+id/registerFemaleRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/registerFemaleText" />
    </RadioGroup>

    <Button
        android:id="@+id/registerSubmitB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="268dp"
        android:layout_marginBottom="68dp"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerGenderRG" />
</android.support.constraint.ConstraintLayout>